1.2.2
-----
1. For desktop browsers, auto-focus search field if it is the first item in a
   list. (Issue #198)

1.2.1
-----
 1. Ignore clicks on search header if all values for that field are being shown.
 2. Allow add-all/play-all from 'trackinfo', as Spotty's 'Top Titles' accessed
    via 'More' needs this
 3. Fix 'Remove album' missing from queue menu in mobile browsers.
 4. Clear queue selection if change player.
 5. Fix unselection of queue items.
 6. Unescape titles - mainly to fix YouTube lists.
 7. Actually start updates checking timer.
 8. Fix location of 'Fixed Volume' label in mini-player.
 9. Minify all material JS files into 1.
10. Combine library JS and CSS files.

1.2.0
-----
 1. Use 'Shift' key to select a range of items.
 2. Add button to invert selection.
 3. Allow protecting alarms and settings via pin/password.
 4. Add option to play silence when lock screen and notification controls are
    enabled.
 5. Only prevent media session if using SB Player when also set to play silence.
 6. Display message indicating insufficient metadata if the required info is not
    present for MAI lyrics, review, or biography.
 7. Add link to user guide from 'Information' dialog.
 8. Show sample rate in technical info.
 9. Long press on prev/next buttons in now playing to skip back/forward 5, 10,
    15, or 30 seconds.
10. Add context menu to now-playing info view to set font size; Standard,
    Medium, or Large.
11. Add Italian translation, thanks to franz159
12. Don't ignore negative coverids. Playing from 'Disks and folders' can give
    negative IDs.
13. Use javascript to hide certain options from classic skin. CSS only does not
    work for iOS.
14. Add 'Remove album' option to queue items. Allows all track from an album to
    be removed from queue.
15. If player has no digital volume control (i.e. "Output Level is fixed at
    100%" is set), then show volume as 100% and add "Fixed Volume" label.